{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 115,
  "lineage": "daab8084-1fae-8d93-b18b-aa379e1b539d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322194580427:internet-gateway/igw-0f7881bd2916e16cf",
            "id": "igw-0f7881bd2916e16cf",
            "owner_id": "322194580427",
            "tags": {
              "Name": "coworkflow-igw"
            },
            "tags_all": {
              "Name": "coworkflow-igw",
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:loadbalancer/app/coworkflow-alb/6e5896319380b312",
            "arn_suffix": "app/coworkflow-alb/6e5896319380b312",
            "desync_mitigation_mode": "defensive",
            "dns_name": "coworkflow-alb-1826579510.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:322194580427:loadbalancer/app/coworkflow-alb/6e5896319380b312",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "coworkflow-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-095c2a08fa8bf2846"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087f785d163416330"
              },
              {
                "subnet_id": "subnet-09239e596c6b14be1"
              }
            ],
            "subnets": [
              "subnet-087f785d163416330",
              "subnet-09239e596c6b14be1"
            ],
            "tags_all": {
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "vpc_id": "vpc-0abe7bf133ca84d23",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:listener/app/coworkflow-alb/6e5896319380b312/f5d8148c69a8f24f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:targetgroup/coworkflow-tg-frontend/083ffff589ef80cb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:322194580427:listener/app/coworkflow-alb/6e5896319380b312/f5d8148c69a8f24f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:loadbalancer/app/coworkflow-alb/6e5896319380b312",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:targetgroup/coworkflow-tg-api/793b52b9ccca59c1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:listener-rule/app/coworkflow-alb/6e5896319380b312/f5d8148c69a8f24f/615731bec44435a1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:322194580427:listener-rule/app/coworkflow-alb/6e5896319380b312/f5d8148c69a8f24f/615731bec44435a1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:listener/app/coworkflow-alb/6e5896319380b312/f5d8148c69a8f24f",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.front_end",
            "aws_lb_target_group.api_gateway",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:targetgroup/coworkflow-tg-api/793b52b9ccca59c1",
            "arn_suffix": "targetgroup/coworkflow-tg-api/793b52b9ccca59c1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:322194580427:targetgroup/coworkflow-tg-api/793b52b9ccca59c1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "coworkflow-tg-api",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322194580427:targetgroup/coworkflow-tg-frontend/083ffff589ef80cb",
            "arn_suffix": "targetgroup/coworkflow-tg-frontend/083ffff589ef80cb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:322194580427:targetgroup/coworkflow-tg-frontend/083ffff589ef80cb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "coworkflow-tg-frontend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322194580427:route-table/rtb-0d21dde07cb4567f4",
            "id": "rtb-0d21dde07cb4567f4",
            "owner_id": "322194580427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7881bd2916e16cf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "coworkflow-public-rt"
            },
            "tags_all": {
              "Name": "coworkflow-public-rt",
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1c79223093ff1eb",
            "route_table_id": "rtb-0d21dde07cb4567f4",
            "subnet_id": "subnet-09239e596c6b14be1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4e2223ad81404d6",
            "route_table_id": "rtb-0d21dde07cb4567f4",
            "subnet_id": "subnet-087f785d163416330"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322194580427:security-group/sg-095c2a08fa8bf2846",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095c2a08fa8bf2846",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "coworkflow-alb-sg",
            "name_prefix": "",
            "owner_id": "322194580427",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322194580427:security-group/sg-0f380040aec312b85",
            "description": "Security Group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f380040aec312b85",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "coworkflow-db-sg",
            "name_prefix": "",
            "owner_id": "322194580427",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322194580427:security-group/sg-05183d2453bd93e46",
            "description": "Security Group for ECS Tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05183d2453bd93e46",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-095c2a08fa8bf2846"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "coworkflow-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "322194580427",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322194580427:subnet/subnet-09239e596c6b14be1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09239e596c6b14be1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "322194580427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "coworkflow-public-1a"
            },
            "tags_all": {
              "Name": "coworkflow-public-1a",
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322194580427:subnet/subnet-087f785d163416330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087f785d163416330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "322194580427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "coworkflow-public-1b"
            },
            "tags_all": {
              "Name": "coworkflow-public-1b",
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            },
            "vpc_id": "vpc-0abe7bf133ca84d23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322194580427:vpc/vpc-0abe7bf133ca84d23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad15fd917ca4b316",
            "default_route_table_id": "rtb-09a59d6f1b639ebbc",
            "default_security_group_id": "sg-04ef4a575aaa5ddb9",
            "dhcp_options_id": "dopt-0bdf01937d3c3820e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abe7bf133ca84d23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a59d6f1b639ebbc",
            "owner_id": "322194580427",
            "tags": {
              "Name": "coworkflow-vpc"
            },
            "tags_all": {
              "Name": "coworkflow-vpc",
              "Project": "CoworkFlow",
              "terraform": "tf-coworkflow"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}